<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="co.yishun.onemoment.app.ui.EspressoTestActivity"
    >

    <TextView
        android:id="@+id/showTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"/>


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="origin"/>

    <Button
        android:id="@+id/changeTextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onChangeText"
        android:text="change text"/>

</LinearLayout>
